--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <figure id="game-screen"></figure>
 
     <script src="./JS/circle.js"></script>
-    <!-- <script src="./JS/fallingPlatforms.js"></script>
-    <script src="./JS/movingPlatforms.js"></script> -->
+    <!-- <script src="./JS/fallingPlatforms.js"></script>-->
+    <script src="./JS/movingPlatforms.js"></script>
     <script src="./JS/fixedPlatforms.js"></script>
     <script src="./JS/elevatorPlatforms.js"></script>
     <script src="./JS/elevatorPlatformsUp.js"></script>
