--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
     <figure id="game-screen"></figure>
 
-    <script src="./JS/circle.js"></script>
-    <!-- <script src="./JS/fallingPlatforms.js"></script>-->
+    <script src="./JS/fixedWall2.js"></script>
+    <script src="./JS/fixedWall1.js"></script>
+    <script src="./JS/lava.js"></script>
     <script src="./JS/movingPlatforms.js"></script>
+    <script src="./JS/movingPlatforms2.js"></script>
     <script src="./JS/fixedPlatforms.js"></script>
     <script src="./JS/elevatorPlatforms.js"></script>
     <script src="./JS/elevatorPlatformsUp.js"></script>
