--- a/index.html
+++ b/index.html
@@ -11,20 +11,26 @@
 
 <body>
 
+    <audio id=Rosalia src="./Audio/Rosalia.mp3"></audio>
+    <audio id=winAudio src="./Audio/WiningSoundDefinitivo.mp3"></audio>
+    <audio id=loseAudio src="./Audio/gameOverSound.mp3"></audio>
+    <script src="./JS/background.js"></script>
     <figure id="game-screen"></figure>
-
-    <script src="./JS/fixedWall2.js"></script>
+    <script src="./JS/Enemies222.js"></script>
+    <script src="./JS/door.js"></script>
+    <script src="./JS/key.js"></script>
     <script src="./JS/fixedWall1.js"></script>
+    <script src="./JS/player.js"></script>
     <script src="./JS/lava.js"></script>
     <script src="./JS/movingPlatforms.js"></script>
-    <script src="./JS/movingPlatforms2.js"></script>
     <script src="./JS/fixedPlatforms.js"></script>
     <script src="./JS/elevatorPlatforms.js"></script>
     <script src="./JS/elevatorPlatformsUp.js"></script>
-    <script src="./JS/player.js"></script>
-    <script src="./JS/background.js"></script>
+
     <script src="./JS/game.js"></script>
     <script src="./JS/index.js"></script>
+    <div id="lose"></div>
+    <div id="win"></div>
 
 </body>
 
